--- a/codecov.yml
+++ b/codecov.yml
@@ -1,18 +1,15 @@
+# Codecov should always pass. Used to show code coverage only
 codecov:
-  require_ci_to_pass: yes
+  require_ci_to_pass: false
   notify:
     wait_for_ci: yes
 
 coverage:
   precision: 2
   round: down
-  range: 70...90
+  range: 70...95
   status:
     project:
       default:
         # basic
-        target: 85
-        threshold: 1%
-
-ignore:
-  - "stsa/search.py"  
+        target: 1
