--- a/codecov.yml
+++ b/codecov.yml
@@ -11,9 +11,14 @@ coverage:
   status:
     project:
       default:
-        # basic
-        # target: 90
-        # threshold: 1
         # Always succeed
         informational: true
-        if_ci_failed: success #success,error
+        if_ci_failed: success
+        # target: 90
+        # threshold: 1
+    patch:
+      default:
+        target:
+          # Always succeed
+          informational: true
+          if_ci_failed: success
