--- a/codecov.yml
+++ b/codecov.yml
@@ -1,24 +1,21 @@
-# Codecov should always pass. Used to show code coverage only
 codecov:
   require_ci_to_pass: false
   notify:
-    wait_for_ci: yes
-
+    require_ci_to_pass: no
+    after_n_builds: 1
 coverage:
-  precision: 2
-  round: down
-  range: 70...95
   status:
     project:
       default:
-        # Always succeed
-        informational: true
-        if_ci_failed: success
-        # target: 90
-        # threshold: 1
+        # Require 1% coverage, i.e., always succeed
+        target: 1
     patch:
       default:
-        target:
-          # Always succeed
-          informational: true
-          if_ci_failed: success
+        target: 0
+        if_no_uploads: error
+        if_not_found: success
+        if_ci_failed: failure
+    changes: false
+comment: off
+github_checks:
+    annotations: false
